--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "1.0.0",
   "description": "Movie API with GraphQL",
   "main": "index.js",
-  "license": "MIT"
+  "repository": "https://github.com/jakejonggubaek/graphql-movie-api.git",
+  "license": "MIT",
+  "dependencies": {
+    "graphql-yoga": "^1.18.3"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.13.16",
+    "@babel/node": "^7.13.13",
+    "@babel/preset-env": "^7.13.15",
+    "nodemon": "^2.0.7"
+  }
 }
